fix: "fixing section of pricing"

--- a/css/style.css
+++ b/css/style.css
@@ -515,3 +515,114 @@ section {
     background-attachment: fixed;
   }
 }
+
+/*--------------------------------------------------------------
+# Pricing
+--------------------------------------------------------------*/
+.pricing{
+  background-color: rgb(26, 24, 24);
+}
+.pricing .box {
+  padding: 40px;
+  
+  background: #ffffffda;
+  text-align: center;
+  border-radius: 8px;
+  position: relative;
+  overflow: hidden;
+  border: 2px solid #f9f9f9;
+}
+.pricing .box h3 {
+  font-weight: 400;
+  padding: 15px;
+  margin-top: 15px;
+  font-size: 20px;
+  font-weight: 600;
+  color: #181616;
+}
+.pricing .box h4 {
+  font-size: 42px;
+  color: #771ae2;
+  font-weight: 500;
+  font-family: "Open Sans", sans-serif;
+  margin-bottom: 20px;
+}
+.pricing .box h4 sup {
+  font-size: 20px;
+  top: -15px;
+  left: -3px;
+}
+.pricing .box h4 span {
+  color: #201e1e;
+  font-size: 16px;
+  font-weight: 300;
+}
+.pricing .box h3 span {
+  color: #771ae2;
+  font-size: 26px;
+}
+.pricing .box ul {
+  padding: 0;
+  list-style: none;
+  color: #1b1819;
+  text-align: center;
+  line-height: 20px;
+  font-size: 14px;
+}
+.pricing .box ul li {
+  padding-bottom: 16px;
+}
+.pricing .box ul i {
+  color: #771ae2;
+  font-size: 18px;
+  padding-right: 4px;
+}
+.pricing .box ul .na {
+  color: rgb(97, 92, 92);
+  text-decoration: line-through;
+}
+.pricing .box .btn-wrap {
+  padding: 15px;
+  text-align: center;
+}
+.pricing .box .btn-buy {
+  display: inline-block;
+  padding: 8px 40px 10px 40px;
+  border-radius: 50px;
+  border: 2px solid #771ae2;
+  color: #771ae2;
+  font-size: 14px;
+  font-weight: 400;
+  font-family: "Nunito", sans-serif;
+  font-weight: 600;
+  transition: 0.3s;
+}
+.pricing .box .btn-buy:hover {
+  background: #771ae2;
+  color: #fff;
+}
+.pricing .recommended {
+  border-color: #771ae2;
+}
+.pricing .recommended .btn-buy {
+  background: #771ae2;
+  color: #fff;
+}
+.pricing .recommended .btn-buy:hover {
+  background: #561ed9;
+  border-color: #561ed9;
+
+}
+.pricing .recommended-badge {
+  margin-top: 20px;
+  position: absolute;
+  top: 5px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+  font-size: 13px;
+  padding: 3px 25px 6px 25px;
+  background: #fce6ea;
+  color: #771ae2;
+  border-radius: 50px;
+}
